--- a/index.html
+++ b/index.html
@@ -157,13 +157,9 @@
       color:var(--text);
     }
 
-    /* Router: mostra solo la section non-hidden */
     section{display:none;}
     section:not(.hidden){display:block;}
 
-    /* =========================
-       BANNER (in alto, bello)
-       ========================= */
     .banner{
       position: sticky;
       top: 10px;
@@ -184,6 +180,7 @@
       font-size:13px;
       line-height:1.35;
       color: var(--text);
+      white-space: pre-wrap;
     }
     .banner .close{
       flex: 0 0 auto;
@@ -222,7 +219,6 @@
       <div class="pill" id="installPill" style="display:none;">⬇️ Installa</div>
     </header>
 
-    <!-- BANNER (globale, visibile su tutte le viste) -->
     <div id="banner" class="banner hidden" role="status" aria-live="polite">
       <div class="text" id="bannerText"></div>
       <button class="close" id="bannerClose" type="button">✕</button>
@@ -274,9 +270,7 @@
           <button class="ghost" id="btnPickCamera" type="button">📷 Scatta foto</button>
           <button class="ghost" id="btnPickGallery" type="button">🖼️ Scegli dalla galleria</button>
 
-          <!-- Input fotocamera -->
           <input id="fotoCamera" type="file" accept="image/*" capture="environment" class="hidden" />
-          <!-- Input galleria -->
           <input id="fotoGallery" type="file" accept="image/*" class="hidden" />
 
           <button class="danger" id="btnClearPhoto" type="button">🧹 Rimuovi</button>
@@ -287,7 +281,7 @@
           <div class="meta">
             <div style="font-weight:800;color:var(--text)">Anteprima foto</div>
             <div id="photoMeta"></div>
-            <div class="hint" style="margin-top:8px">Se presente, la foto viene inoltrata sul canale Telegram Segnala Facile come allegato.</div>
+            <div class="hint" style="margin-top:8px">Se presente, la foto viene inoltrata su Telegram come allegato (via Worker).</div>
           </div>
         </div>
 
@@ -316,8 +310,8 @@
         <div class="ok">
           <div style="font-size:22px">✅</div>
           <div>
-            <div style="font-weight:900;font-size:18px">Segnalazione inviata correttamente</div>
-            <div class="hint" style="margin:6px 0 0">Salvata in locale e inoltrata su gruppo Telegram Segnala Facile.</div>
+            <div id="successTitle" style="font-weight:900;font-size:18px">Segnalazione inviata correttamente</div>
+            <div id="successHint" class="hint" style="margin:6px 0 0">Salvata in locale e inoltrata su gruppo Telegram Segnala Facile.</div>
           </div>
         </div>
 
@@ -357,7 +351,7 @@
         <div style="display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap">
           <div>
             <div style="font-weight:900;font-size:18px">Contatti rapidi</div>
-            <div class="hint" style="margin:6px 0 0">Un solo punto di contatto. Niente messaggi persi.</div>
+            <div class="hint" style="margin:6px 0 0">Telegram e Email sono solo riferimenti.</div>
           </div>
           <a class="btn small ghost" href="#/">← Home</a>
         </div>
@@ -386,7 +380,7 @@
 
   <script>
     // =========================
-    // CONFIG (personalizza qui)
+    // CONFIG
     // =========================
     const CONFIG = {
       telegramUsername: "SegnalaFacileBot",
@@ -443,7 +437,7 @@
     });
 
     // =========================
-    // Simple router
+    // Router
     // =========================
     const views = {
       home: document.getElementById("view-home"),
@@ -458,11 +452,26 @@
       navLinks.forEach(a => a.classList.toggle("active", a.dataset.nav === key));
     }
 
+    function updateSuccessView(){
+      const ok = sessionStorage.getItem("lastSendTelegramOk") === "1";
+      const title = document.getElementById("successTitle");
+      const hint  = document.getElementById("successHint");
+
+      if(ok){
+        title.textContent = "Segnalazione inviata correttamente";
+        hint.textContent  = "Salvata in locale e inoltrata su gruppo Telegram Segnala Facile.";
+      }else{
+        title.textContent = "Segnalazione salvata correttamente";
+        hint.textContent  = "Salvata in locale. Telegram non ha inoltrato (nessun dato perso).";
+      }
+    }
+
     function showView(key){
       Object.values(views).forEach(v => v.classList.add("hidden"));
       views[key].classList.remove("hidden");
       setActiveNav(key);
       if(key === "my") renderList();
+      if(key === "success") updateSuccessView();
       window.scrollTo({ top: 0, behavior: "smooth" });
     }
 
@@ -479,7 +488,7 @@
     window.addEventListener("hashchange", route);
 
     // =========================
-    // Contacts links
+    // Contacts
     // =========================
     const mail = document.getElementById("mailLink");
     const map = document.getElementById("mapLink");
@@ -495,7 +504,7 @@
     applyContacts();
 
     // =========================
-    // Local storage for reports
+    // Local storage reports
     // =========================
     const STORAGE_KEY = "segnalafacile_reports_v3";
 
@@ -508,7 +517,7 @@
     }
 
     // =========================
-    // Form logic + photo
+    // Form + photo
     // =========================
     const elTitolo = document.getElementById("titolo");
     const elDescrizione = document.getElementById("descrizione");
@@ -527,10 +536,9 @@
     const photoImg = document.getElementById("photoImg");
     const photoMeta = document.getElementById("photoMeta");
 
-    let photoDataUrl = null;     // dataURL (jpeg compresso)
+    let photoDataUrl = null; // dataURL (jpeg compresso)
     let photoName = "";
     let photoType = "";
-    let photoBlob = null;
 
     btnPickCamera.addEventListener("click", () => elFotoCamera.click());
     btnPickGallery.addEventListener("click", () => elFotoGallery.click());
@@ -541,7 +549,6 @@
       photoDataUrl = null;
       photoName = "";
       photoType = "";
-      photoBlob = null;
       preview.style.display = "none";
       showBanner("info", "Foto rimossa.", 1800);
     });
@@ -558,10 +565,7 @@
         photoName = file.name || "foto.jpg";
         photoType = file.type || "image/jpeg";
 
-        // Manteniamo anche il Blob originale per invio "allegato vero"
-        photoBlob = file;
-
-        // compress (riduce peso, evita base64 enormi - usato SOLO per anteprima e salvataggio locale)
+        // compress -> dataUrl per anteprima + invio JSON al Worker
         photoDataUrl = await compressImageToDataUrl(file, 1280, 0.82);
 
         photoImg.src = photoDataUrl;
@@ -595,10 +599,16 @@
       photoDataUrl = null;
       photoName = "";
       photoType = "";
-      photoBlob = null;
       preview.style.display = "none";
     }
 
+    function cryptoRandomId(){
+      return (crypto?.randomUUID?.() || ("id_" + Math.random().toString(16).slice(2) + Date.now()));
+    }
+
+    // =========================
+    // INVIO
+    // =========================
     btnSend.addEventListener("click", async () => {
       const titolo = elTitolo.value.trim();
       const descrizione = elDescrizione.value.trim();
@@ -614,13 +624,12 @@
 
       const now = new Date();
 
-      // UI: stato invio
       btnSend.disabled = true;
       const oldBtnText = btnSend.textContent;
       btnSend.textContent = "⏳ Invio in corso...";
       showBanner("info", "Sto salvando e inoltrando…", 0);
 
-      // 1) Salva in locale
+      // 1) salva in locale (sempre)
       const reports = loadReports();
       const item = {
         id: cryptoRandomId(),
@@ -633,70 +642,69 @@
       reports.unshift(item);
       saveReports(reports);
 
-      // 2) Inoltra su Telegram via Worker (allegato vero)
+      // 2) inoltro Telegram via Worker (JSON, come richiesto dal Worker)
       let telegramOk = false;
+
       try{
         if(CONFIG.telegramWorkerUrl){
-          // FormData: invio "serio" con allegato
-          const fd = new FormData();
-          fd.append("titolo", titolo);
-          fd.append("descrizione", descrizione);
-          fd.append("anonimo", String(!!elAnonimo.checked));
-          fd.append("when", now.toLocaleString("it-IT"));
-          fd.append("hasPhoto", String(!!photoBlob));
-          if(photoBlob){
-            fd.append("photo", photoBlob, photoName || "foto.jpg");
+          // URL con chiave anche in query (compatibilità extra)
+          const url = new URL(CONFIG.telegramWorkerUrl);
+          if(CONFIG.telegramApiKey){
+            url.searchParams.set("ak", CONFIG.telegramApiKey);
           }
 
-          const res = await fetch(CONFIG.telegramWorkerUrl, {
+          const payload = {
+            titolo,
+            descrizione,
+            anonimo: !!elAnonimo.checked,
+            when: now.toLocaleString("it-IT"),
+            source: "SegnalaFacile PWA",
+            photo: photoDataUrl ? {
+              dataUrl: photoDataUrl,
+              name: photoName || "foto.jpg",
+              type: photoType || "image/jpeg"
+            } : null
+          };
+
+          const res = await fetch(url.toString(), {
             method: "POST",
             headers: {
+              "Content-Type": "application/json",
               "X-Api-Key": CONFIG.telegramApiKey || ""
             },
-            body: fd
+            body: JSON.stringify(payload)
           });
 
+          const txt = await res.text().catch(() => "");
           telegramOk = res.ok;
 
-          // ===== MODIFICA: mostra status/risposta anche senza console =====
-          let respText = "";
-          try { respText = await res.text(); } catch { respText = ""; }
-
           localStorage.setItem("last_telegram_status", String(res.status));
-          localStorage.setItem("last_telegram_body", (respText || "").slice(0, 300));
+          localStorage.setItem("last_telegram_body", (txt || "").slice(0, 400));
 
           if(!res.ok){
-            const short = (respText || "").slice(0, 120).replace(/\s+/g, " ").trim();
-            showBanner(
-              "error",
-              `Telegram/Worker: errore ${res.status}${short ? " • " + short : ""}`,
-              9000
-            );
+            const short = (txt || "").slice(0, 220).replace(/\s+/g, " ").trim();
+            showBanner("error", `Telegram/Worker: errore ${res.status} • ${short || "nessun dettaglio"}`, 10000);
           }
-          // ===============================================================
         }
       }catch(e){
         localStorage.setItem("last_telegram_status", "NETWORK_ERROR");
-        localStorage.setItem("last_telegram_body", String(e?.message || e || "").slice(0, 300));
-        showBanner("error", "Errore rete: Telegram/Worker non raggiungibile.", 8000);
+        localStorage.setItem("last_telegram_body", String(e?.message || e || "").slice(0, 400));
+        showBanner("error", "Errore rete: Worker Telegram non raggiungibile.", 9000);
       }
 
-      // UI: esito
+      // salva esito per schermata SUCCESS
+      sessionStorage.setItem("lastSendTelegramOk", telegramOk ? "1" : "0");
+
       if(telegramOk){
         showBanner("success", "Segnalazione salvata e inoltrata su Telegram ✅", 4500);
       }else{
-        // Se non è già stato mostrato lo status (es. workerUrl vuoto), messaggio generico
+        // non sovrascrivo se già mostrato errore dettagliato
+        // ma se non c'è worker url, messaggio chiaro:
         if(!CONFIG.telegramWorkerUrl){
           showBanner("error", "Segnalazione salvata in locale. Worker Telegram non configurato.", 6500);
-        }else{
-          // Qui può già esserci un banner con errore status; lasciamo comunque un messaggio chiaro
-          // (non sovrascrivo se hai appena visto lo status)
-          // Se vuoi, puoi commentare le 2 righe sotto.
-          // showBanner("error", "Segnalazione salvata in locale. Telegram non ha risposto (ma non hai perso nulla).", 6500);
         }
       }
 
-      // ripristina UI
       btnSend.disabled = false;
       btnSend.textContent = oldBtnText;
 
@@ -704,10 +712,9 @@
       location.hash = "#/success";
     });
 
-    function cryptoRandomId(){
-      return (crypto?.randomUUID?.() || ("id_" + Math.random().toString(16).slice(2) + Date.now()));
-    }
-
+    // =========================
+    // Storico
+    // =========================
     function fmtDate(iso){
       const d = new Date(iso);
       return d.toLocaleString("it-IT", { year:"numeric", month:"2-digit", day:"2-digit", hour:"2-digit", minute:"2-digit" });
@@ -807,7 +814,6 @@
       const ctx = canvas.getContext("2d");
       ctx.drawImage(img, 0, 0, w, h);
 
-      // convert to jpeg to keep size low
       return canvas.toDataURL("image/jpeg", quality);
     }
 
