--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           <div class="badge">PWA installabile • salvataggio locale + invio gruppo TelegramSegnala Facile</div>
         </div>
       </div>
-      <div class="pill" id="installPill" style="display:none;">⬇️ Installa</div>
+      <button class="pill" id="installPill" style="display:none; cursor:pointer;" type="button">⬇️ Installa</button>
     </header>
 
     <div id="banner" class="banner hidden" role="status" aria-live="polite">
